Time: 26 ms (91.28%) | Memory: 92.5 MB (20.77%) - LeetSync